# flask-geocoding-webapp

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build.sh  config.py  pyproject.toml  requirements-dev.txt  requirements.txt  run-local.sh  run.bjoern.py  run.debug.py  setup.cfg  setup.py
.github/workflows/: pipeline.yml
copilot/: .workspace
copilot/geocoder-ui/: manifest.yml
geocoder_app/: __init__.py  config.py  forms.py  mapping.py  routes.py
geocoder_app/templates/: layout.html  navigation.html
infra/: .env.example  .isort.cfg  README.md  app.py  cdk.json  setup.py
infra/stacks/: config.py  ecs_cognito_stack.py  ecs_elb_stack.py  ecs_stack.py
scripts/: run
tests/: conftest.py  test_geocoder.py
webmap/: forms.py  mapping.py  routes.py
webmap/templates/: index.html  layout.html  map.html  navigation.html
