[aliases]
release = sdist bdist_wheel
test = pytest

[bdist_wheel]
universal = 1

[metadata]
name = geocoderapp
url = https://github.com/mblackgeo/flask-geocoding-webapp.git
description = A simple geocoding webapp using Flask and Folium
long_description = file: README.md
long_description_content_type = text/markdown
author = Martin Black
author_email = mblack@sparkgeo.com
zip_safe = False

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
    bjoern~=3.1.0
    flask~=2.0.2
    flask-wtf~=0.15.1
    folium~=0.12.1
    geopy~=2.2.0
    python-dotenv~=0.17.1
    wtforms~=2.3.3
tests_require =
    pytest
    pytest-cov
